Fixed horizontal scroll mobile issue, Fixed 404 redirection issue for Netlify, updated name and icons for app

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -7,6 +7,7 @@
     padding: 24px 0;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 
     @include tablet {
         padding: 32px 0;
